--- a/css/style.css
+++ b/css/style.css
@@ -355,10 +355,10 @@ body {
   left: 10em;
   z-index: 1;
 }
-.bann-contents h3{
+/* .bann-contents h3{
 color: var(--text-color)
 
-}
+} */
 .banner-left h2 {
 color: var(--text-color);
 /* color: #f4f4f4; */
